# SGI-Onyx2-Demo

./: .gitmodules  CMakeLists.txt
graphics-engine/: CMakeLists.txt
graphics-engine/src/graphics/: Graphics.cpp  Graphics.h  Scene.cpp  Scene.h
graphics-engine/src/math/: Math.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
graphics-engine/src/utils/: SpUtils.h
modules/component-system/: CMakeLists.txt
modules/component-system/include/: Component.h
modules/component-system/src/: Component.cpp
modules/engine/: CMakeLists.txt
modules/engine/include/Components/: Component.h
modules/engine/include/Scene/: Node.h  Scene.h
modules/engine/src/Components/: Component.cpp
modules/engine/src/Scene/: Node.cpp  Scene.cpp
modules/graphics-engine/: CMakeLists.txt
modules/graphics-engine/include/: Graphics.h  Scene.h
modules/graphics-engine/include/properties/: Properties.h
modules/graphics-engine/src/: Graphics.cpp  Scene.cpp
modules/graphics-engine/src/properties/: Properties.cpp
modules/graphics-engine/src/utils/: SpUtils.cpp  SpUtils.h
src/: main.cpp
src/graphics/: Graphics.cpp  Graphics.h  Scene.h
src/math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
src/utils/: Math.h  SpUtils.cpp  SpUtils.h  Utils.cpp  Utils.h
tests/: MatrixTest.cpp  main.cpp
